deploy/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: hello-api
  name: hello-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-api
    spec:
      containers:
        - name: hello-api
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
          livenessProbe:
            httpGet:
              path: /_meta/health
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /_meta/ready
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 10
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          image: quay.io/kalote/hello-api:latest
