deploy/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: 'hello-ingress'
  namespace: 'default'
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /_meta/health
  labels:
    app: hello-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: 'hello-api'
              servicePort: 3000
